Allow specifying alternate URI scheme in camera encoder.